Act XXVII: css changes mostly focused for smaller screens

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div>
-  <h3 class="padding-20px">Board Meering App</h3>
+  <h2 class="padding-20px">Board Meetings App</h2>
   <router-outlet></router-outlet>
 </div>
