--- a/src/app/create-agenda/create-agenda.component.html
+++ b/src/app/create-agenda/create-agenda.component.html
@@ -10,8 +10,8 @@
             </div>
             <div class="flex-box">
                 <!-- <button class="select-buttons" mat-stroked-button [mat-dialog-close]="onSubmit()" type="submit">Submit</button> -->
-                <button mat-stroked-button class="flex-container select-buttons"  type="submit">Submit</button>
-                <button mat-stroked-button class="flex-container select-buttons" mat-dialog-close type="submit">Close</button>
+                <button mat-stroked-button class="main-container select-buttons"  type="submit">Submit</button>
+                <button mat-stroked-button class="main-container select-buttons" mat-dialog-close type="submit">Close</button>
             </div>
 
         </div>
