--- a/src/app/new-meeting-page/invates/invites.component.html
+++ b/src/app/new-meeting-page/invates/invites.component.html
@@ -2,7 +2,7 @@
     <div class="flex-box">
         <h2>Invites</h2>
     </div>
-    <div class="flex-container gap-1rem">
+    <div class="main-container gap-1rem">
         <mat-tab-group class="mat-tab-labels" style="width: 27rem;">
             <mat-tab label="Board">
                 <div class="separator-forInvates"></div>
