--- a/src/app/new-meeting-page/new-meeting-page.component.html
+++ b/src/app/new-meeting-page/new-meeting-page.component.html
@@ -8,7 +8,7 @@
     </div>
 </div>
 <div class="separator-horizontal margin-top-10px" style></div>
-<div class="flex-container">
+<div class="main-container">
     <div class="main-menu">
         <app-new-meeting></app-new-meeting>
     </div>
