--- a/src/app/new-meeting-page/new-meeting/new-meeting.component.html
+++ b/src/app/new-meeting-page/new-meeting/new-meeting.component.html
@@ -32,7 +32,7 @@
       </div>
       <div>
         <h3>Date and time</h3>
-        <div class="main calendar-container">
+        <div class="calendar-container">
           <app-datepicker (dateSelected)="handleDateSelected($event)"></app-datepicker>
           <app-timepicker (timeSelected)="handleTimeSelected($event, TimeType.Start)"></app-timepicker>
           <app-timepicker (timeSelected)="handleTimeSelected($event, TimeType.End)"></app-timepicker>
