--- a/src/app/new-meeting-page/tasks/tasks.component.html
+++ b/src/app/new-meeting-page/tasks/tasks.component.html
@@ -1,4 +1,4 @@
-<div class="" style="display: block; max-width: 500px;">
+<div class="" style="max-width: 500px;">
   <div class="flex-box">
     <h2>
       Tasks
