--- a/src/app/new-meeting-page/new-meeting/new-meeting.component.html
+++ b/src/app/new-meeting-page/new-meeting/new-meeting.component.html
@@ -83,9 +83,9 @@
         </mat-card-header>
         <mat-card-content>agenda of the meeting</mat-card-content>
         <div class="select-buttons-grup">
-          <button mat-stroked-button class="select-buttons-agenda">Create agenda</button>
+          <button mat-stroked-button class="select-buttons-agenda" (click)="newAgenda()">Create agenda</button>
           <input type="file" #chooseFile style="display: none" (change)="onFileSelected($event, FileType.ChooseFile)" />
-          <button mat-stroked-button class="select-buttons-agenda" (click)="openFilePicker(chooseFileInput)" disabled="true">Choose File</button>
+          <button mat-stroked-button class="select-buttons-agenda" (click)="openFilePicker(chooseFileInput)" disabled="true">Choose Agenda</button>
         </div>
       </mat-card>
       <div>
