bugfix#1: changes in css

--- a/src/app/dialog-list/dialog-list.component.html
+++ b/src/app/dialog-list/dialog-list.component.html
@@ -2,17 +2,22 @@
     <h1 mat-dialog-title>Create Agenda</h1>
     <form [formGroup]="form" style="display: flex; flex-direction: column; justify-content: center;">
         <div mat-dialog-content>
-            <mat-form-field style="display: flex; align-items: center; justify-content: center; padding: 10px;">
-                <input matInput formControlName="agendaName" placeholder="Agenda Name">
+            <mat-form-field class="container-flex wider-input" style="margin-left: 1rem;">
+                <input matInput class="" formControlName="agendaName" placeholder="Agenda Name">
             </mat-form-field>
-            <div *ngIf="list.length > 0" cdkDropList class="example-list" (cdkDropListDropped)="drop($event)">
-                <div class="example-box" *ngFor="let item of list; index as i" cdkDrag>{{item}}</div>
+            <div class="container-flex">
+                <div *ngIf="list.length > 0" cdkDropList class="example-list" (cdkDropListDropped)="drop($event)">
+                    <div class="example-box" *ngFor="let item of list; index as i" cdkDrag>{{item}}</div>
+                </div>
             </div>
-            <div style="display: flex; align-items: center; justify-content: center; padding: 10px;">
-                <label style="padding: 5px"></label>
-                <input style="padding: 5px" matInput type="text" formControlName="newElement">
-                <button (click)="addElement()">
-                    <mat-icon style="padding: 5px">playlist_add</mat-icon>
+
+            <div class="container-flex">
+                <div style="padding: 10px;">
+                    <label style="padding: 5px"></label>
+                    <input style="padding: 10px; margin-left: 2px;" matInput type="text" formControlName="newElement">
+                </div>
+                <button mat-flat-button (click)="addElement()" style="border-radius: 25%;">
+                    <mat-icon style="padding: 0 0 0 15px">playlist_add</mat-icon>
                 </button>
 
             </div>
