--- a/src/app/dialog-list/dialog-list.component.css
+++ b/src/app/dialog-list/dialog-list.component.css
@@ -8,7 +8,7 @@
 .example-list {
   /* width: 500px; */
   /* max-width: 80%; */
-  width: 17rem;
+  width: 19rem;
   border: solid 1px #ccc;
   /* min-height: 60px; */
   display: block;
@@ -18,7 +18,8 @@
 }
 
 .example-box {
-  padding: 10px 10px;
+  /* padding: 10px 10px; */
+  padding: 0px 10px;
   border-bottom: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
   display: flex;
