--- a/src/app/dialog-list/dialog-list.component.html
+++ b/src/app/dialog-list/dialog-list.component.html
@@ -7,22 +7,28 @@
             </mat-form-field>
             <div class="container-flex">
                 <div *ngIf="list.length > 0" cdkDropList class="example-list" (cdkDropListDropped)="drop($event)">
-                    <div class="example-box" *ngFor="let item of list; index as i" cdkDrag>{{item}}</div>
+                    <div class="example-box" *ngFor="let item of list; index as i" cdkDrag>
+                        <span>{{ item }}</span>
+                        <button mat-icon-button (click)="removeElement(i)">
+                          <mat-icon class="small-icon">delete</mat-icon>
+                        </button>
+                    </div>
                 </div>
             </div>
 
             <div class="container-flex">
                 <div style="padding: 10px;">
                     <label style="padding: 5px"></label>
-                    <input style="padding: 10px; margin-left: 2px;" matInput type="text" formControlName="newElement">
+                    <input style="padding: 10px; margin-left: 2px;" matInput type="text" #newElement>
                 </div>
-                <button mat-flat-button (click)="addElement()" style="border-radius: 25%;">
+                <button mat-flat-button (click)="addElement(newElement.value)" style="border-radius: 25%;">
                     <mat-icon style="padding: 0 0 0 15px">playlist_add</mat-icon>
                 </button>
 
             </div>
             <div class="flex-box">
-                <button mat-stroked-button class="main-container select-buttons" type="submit" (click)="saveDialog()">Submit</button>
+                <button mat-stroked-button class="main-container select-buttons" type="submit" (click)="saveDialog()"
+                [disabled]="form.invalid">Submit</button>
                 <button mat-stroked-button class="main-container select-buttons" mat-dialog-close type="button">Close</button>
             </div>
         </div>
