--- a/src/app/dialog-form/dialog-form.component.html
+++ b/src/app/dialog-form/dialog-form.component.html
@@ -10,10 +10,11 @@
             </div>
             <div class="flex-box">
                 <!-- <button class="select-buttons" mat-stroked-button [mat-dialog-close]="onSubmit()" type="submit">Submit</button> -->
-                <button mat-stroked-button class="main-container select-buttons" (click)="SaveDialog()" type="submit">Submit</button>
-                <button mat-stroked-button class="main-container select-buttons" mat-dialog-close type="submit">Close</button>
+                <button mat-stroked-button class="main-container select-buttons" (click)="SaveDialog()"
+                    type="submit">Submit</button>
+                <button mat-stroked-button class="main-container select-buttons" mat-dialog-close
+                    type="submit">Close</button>
             </div>
-
         </div>
     </form>
 </div>
