feature#5 added new list of meetings working on https protocol with certs, renemed dataService to restService and many more

--- a/src/styles.css
+++ b/src/styles.css
@@ -251,6 +251,14 @@ app-tasks {
   transform: scale(0.7);
 }
 
+.header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+
 
 @media only screen and (max-width: 1000px) {
   .main-container {
