--- a/src/app/main-menu/main-menu.component.html
+++ b/src/app/main-menu/main-menu.component.html
@@ -3,6 +3,7 @@
     <h3>Main Menu</h3>
     <div class="centered-top-container margin-top-10px">
       <button mat-stroked-button class="margin-top-10px" routerLink="/new-meeting">New Meeting</button>
+      <button mat-stroked-button class="margin-top-10px" routerLink="/meetings-list">Meetings List</button>
       <button mat-stroked-button class="margin-top-10px"
         [routerLink]="[{ outlets: { bottomOutlet: ['about'] } }]">About</button>
     </div>
