--- a/src/app/meetings-list/meetings-list.component.html
+++ b/src/app/meetings-list/meetings-list.component.html
@@ -4,15 +4,15 @@
     </div>
 </div>
 <div class="separator-horizontal margin-top-10px" style></div>
-<div>
+<div class="my-list-container">
     <div *ngIf="!meetingsNotEmpty">
         <mat-spinner></mat-spinner>
     </div>
-    <div *ngIf="meetingsNotEmpty">
+    <div *ngIf="meetingsNotEmpty" class="my-list" >
         <table mat-table [dataSource]="meetingsList" class="mat-elevation-z8">
             <ng-container matColumnDef="meetingName">
-              <th mat-header-cell *matHeaderCellDef> Meeting name </th>
-              <td mat-cell *matCellDef="let element"> {{element.meetingName}} </td>
+                <th mat-header-cell *matHeaderCellDef> Meeting name </th>
+                <td mat-cell *matCellDef="let element"> {{element.meetingName}} </td>
             </ng-container>
             <ng-container matColumnDef="meetingType">
                 <th mat-header-cell *matHeaderCellDef> Meeting type </th>
@@ -26,12 +26,20 @@
                 <th mat-header-cell *matHeaderCellDef> End date </th>
                 <td mat-cell *matCellDef="let element"> {{element.dateEnd | date:'dd.MM.yyyy HH:mm:ss' }} </td>
             </ng-container>
+            <ng-container matColumnDef="deleteButton">
+                <th mat-header-cell *matHeaderCellDef> Delete </th>
+                <td mat-cell *matCellDef="let element">
+                    <button mat-mini-fab color="primary" aria-label="Delete" (click)="deleteMeeting(element.id)">
+                        <mat-icon>delete</mat-icon>
+                    </button>
+                </td>
+            </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
     </div>
 
-      <div>
+    <div>
         <mat-error>{{errorMessage}}</mat-error>
-      </div>
+    </div>
 </div>
