--- a/src/app/meetings-list/meetings-list.component.html
+++ b/src/app/meetings-list/meetings-list.component.html
@@ -29,8 +29,16 @@
             <ng-container matColumnDef="deleteButton">
                 <th mat-header-cell *matHeaderCellDef> Delete </th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-mini-fab color="primary" aria-label="Delete" (click)="deleteMeeting(element.id)">
+                    <button mat-mini-fab color="primary" [disabled]="!meetingsNotEmpty" aria-label="Delete" (click)="deleteMeeting(element.id)">
                         <mat-icon>delete</mat-icon>
+                    </button>
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="editButton">
+                <th mat-header-cell *matHeaderCellDef> Edit </th>
+                <td mat-cell *matCellDef="let element">
+                    <button mat-mini-fab color="primary" [disabled]="!meetingsNotEmpty" aria-label="Edit" [routerLink]="['/edit-meeting', element.id]">
+                        <mat-icon>edit</mat-icon>
                     </button>
                 </td>
             </ng-container>
