--- a/src/app/new-meeting-page/new-meeting-page.component.html
+++ b/src/app/new-meeting-page/new-meeting-page.component.html
@@ -10,7 +10,7 @@
 <div class="separator-horizontal margin-top-10px" style></div>
 <div class="main-container">
     <div class="main-menu">
-        <app-new-meeting></app-new-meeting>
+        <app-new-meeting [editedMeeting]="editedMeeting"></app-new-meeting>
     </div>
     <div class="separator-vertical"></div>
     <div class="side-menu">
