--- a/src/app/new-meeting-page/new-meeting/new-meeting.component.html
+++ b/src/app/new-meeting-page/new-meeting/new-meeting.component.html
@@ -19,15 +19,17 @@
       <div>
         <h3>Meeting name</h3>
         <mat-form-field class="wider-element wider-container wider-box lower-input">
-          <input class="wider-input" [formControl]="meetingName" matInput>
+          <input class="wider-input" formControlName="meetingName" matInput>
           <button class="button-X" mat-icon-button matSuffix (click)="clearInput()">
             <mat-icon>clear</mat-icon>
           </button>
         </mat-form-field>
-        <mat-error *ngIf="meetingName.errors?.['notEmpty']">
+        <mat-error *ngIf="form.get('meetingName')?.errors?.['notEmpty']">
           Meeting name is required.
         </mat-error>
-        <mat-error *ngIf="meetingName.touched && !meetingName.value && !meetingName.errors?.['notEmpty']">
+        <mat-error *ngIf="form.get('meetingName')?.touched &&
+            !form.get('meetingName')?.value &&
+            !form.get('meetingName')?.errors?.['notEmpty']">
           Meeting cannot be empty.
         </mat-error>
       </div>
@@ -35,8 +37,10 @@
         <h3>Date and time</h3>
         <div class="calendar-container">
           <app-datepicker [defaultDate]="defaultDate" (dateSelected)="handleDateSelected($event)"></app-datepicker>
-          <app-timepicker [selectedTime]="defaultTimeStart" (timeSelected)="handleTimeSelected($event, TimeType.Start)"></app-timepicker>
-          <app-timepicker [selectedTime]="defaultTimeEnd" (timeSelected)="handleTimeSelected($event, TimeType.End)"></app-timepicker>
+          <app-timepicker [selectedTime]="defaultTimeStart"
+            (timeSelected)="handleTimeSelected($event, TimeType.Start)"></app-timepicker>
+          <app-timepicker [selectedTime]="defaultTimeEnd"
+            (timeSelected)="handleTimeSelected($event, TimeType.End)"></app-timepicker>
         </div>
         <mat-error *ngIf="(dateStartControl.errors?.['endBeforeBeginning'] || dateEndControl.errors?.['endBeforeBeginning'])
         && !dateStartControl.pristine && !dateEndControl.pristine">The start date cannot be earlier than the end
