bugfix#7: maped persons collected by get from backend, handled tasks and guests for editing meeting

--- a/src/app/new-meeting-page/invites/invites.component.html
+++ b/src/app/new-meeting-page/invites/invites.component.html
@@ -7,7 +7,7 @@
             <mat-tab label="Board">
                 <div class="separator-forInvates"></div>
                 <br>
-                <app-board></app-board>
+                <app-board [initialPersonsList]="initialPersonsList" [invitedToEdited]="invitedToEdited"></app-board>
             </mat-tab>
             <mat-tab label="Guests">
                 <div class="separator-forInvates"></div>
