--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,12 @@ body {
   margin: 0;
 }
 
+.top-items-grid{
+  display: grid;
+  grid-template-columns: auto auto auto;
+  align-items: center;
+}
+
 .avatar-container{
   display: flex;
   align-items: center;
