--- a/src/app/dialog-list/dialog-list.component.html
+++ b/src/app/dialog-list/dialog-list.component.html
@@ -26,7 +26,7 @@
                 </button>
 
             </div>
-            <div class="flex-box">
+            <div class="flex-box-space">
                 <button mat-stroked-button class="main-container select-buttons" [mat-dialog-close]="form"
                     [disabled]="form.invalid">Create</button>
                 <button mat-stroked-button class="main-container select-buttons" mat-dialog-close
