--- a/src/app/new-meeting-page/invites/invites.component.html
+++ b/src/app/new-meeting-page/invites/invites.component.html
@@ -1,5 +1,5 @@
 <div>
-    <div class="flex-box">
+    <div class="flex-box-space">
         <h2>Invites</h2>
     </div>
     <div class="main-container gap-1rem">
