--- a/src/app/edit-meeting-page/edit-meeting-page.component.html
+++ b/src/app/edit-meeting-page/edit-meeting-page.component.html
@@ -2,6 +2,7 @@
     <div class="padding-left-30px">
         <button mat-icon-button matSuffix routerLink="/home"><mat-icon>keyboard_backspace</mat-icon></button>
     </div>
+    <h2>Edit Meeting № {{editedMeetingId}}</h2>
     <div class="near-button-container gap-20px">
         <button mat-stroked-button href="http://localhost/" (click)="saveDraft()">Save as draft</button>
         <button mat-stroked-button (click)="saveAndPublish()" 
