--- a/src/app/new-meeting-page/new-meeting/new-meeting.component.html
+++ b/src/app/new-meeting-page/new-meeting/new-meeting.component.html
@@ -103,12 +103,12 @@
         <div class="select-buttons-grup">
           <div>
             <ng-container *ngIf="form.get('addedDocuments')?.value != null">
-              <h4>Added Files :</h4>
-              <ul class="wider-element wider-container wider-box">
+              <h4 class="list-header">Added Files :</h4>
+              <ul class="wider-element wider-container wider-box list-container">
                 <li *ngFor="let doc of form.get('addedDocuments')?.value; let i = index">
                   <div class="avatar-container text-listcontainter diplay-flex">
-                    <mat-icon class=" elements-in-list margin-left" fontIcon="file_copy"></mat-icon>
-                    <p class=" elements-in-list margin-left">{{ doc.name }}</p>
+                    <mat-icon class="file-icon" fontIcon="file_copy"></mat-icon>
+                    <p>{{ doc.name }}</p>
                     <button mat-icon-button matSuffix (click)="fileDownloadService.downloadAddedFile(doc)">
                       <mat-icon>download</mat-icon>
                     </button>
@@ -120,14 +120,14 @@
               </ul>
             </ng-container>
             <ng-container *ngIf="form.get('attachedDocuments')?.value != null">
-              <h4>Attached Files :</h4>
-              <ul class="wider-element wider-container wider-box">
+              <h4 class="list-header">Attached Files :</h4>
+              <ul class="wider-element wider-container wider-box list-container">
                 <li *ngFor="let doc of form.get('attachedDocuments')?.value; let i = index">
                   <div class="avatar-container text-listcontainter diplay-flex">
-                    <mat-icon class="elements-in-list margin-left" fontIcon="file_copy"></mat-icon>
-                    <p class=" elements-in-list margin-left">{{ doc.fileName }}</p>
+                    <mat-icon fontIcon="file_copy"></mat-icon>
+                    <p>{{ doc.fileName }}</p>
                     <button mat-icon-button matSuffix (click)="fileDownloadService.downloadFileFromUrl(doc)">
-                      <mat-icon>open_in_new</mat-icon>
+                      <mat-icon>download</mat-icon>
                     </button>
                     <button mat-icon-button matSuffix (click)="deleteAttachedDocs(i)">
                       <mat-icon>clear</mat-icon>
