--- a/src/app/dialog-form/dialog-form.component.html
+++ b/src/app/dialog-form/dialog-form.component.html
@@ -1,16 +1,13 @@
 <div>
     <h1 mat-dialog-title>{{ title }}</h1>
     <form class="flex-box-space" [formGroup]="form">
-
         <div mat-dialog-content>
-
             <div class="wider-element wider-container wider-box lower-input" *ngFor="let field of fields">
                 <label class="">{{ field }} </label>
                 <input class="float-right" matInput type="text" [formControlName]="field">
             </div>
             <div class="flex-box-space">
-                <!-- <button class="select-buttons" mat-stroked-button [mat-dialog-close]="onSubmit()" type="submit">Submit</button> -->
-                <button mat-stroked-button class="main-container select-buttons" (click)="SaveDialog()"
+                <button mat-stroked-button class="main-container select-buttons" [mat-dialog-close]="form.value"
                     type="submit">Submit</button>
                 <button mat-stroked-button class="main-container select-buttons" mat-dialog-close
                     type="submit">Close</button>
