--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,11 @@ body {
   height: 100%;
   font-family: 'Roboto', sans-serif;
   margin: 0;
+ 
+}
+
+*{
+  text-shadow: 0px 5px 10px rgb(104, 104, 104, 0.3);
 }
 
 .top-items-grid{
