refactor#3: moved more controls from free declatration on begining component to be init in form group creation

--- a/src/app/new-meeting-page/new-meeting-page.component.html
+++ b/src/app/new-meeting-page/new-meeting-page.component.html
@@ -1,23 +1,34 @@
 <div class="top-items-grid">
-    <div class="padding-left-30px">
-        <button mat-icon-button matSuffix routerLink="/home"><mat-icon>keyboard_backspace</mat-icon></button>
-    </div>
-    <h2>Create new meeting</h2>
-    <div class="near-button-container gap-20px">
-        <button mat-stroked-button href="http://localhost/" (click)="saveDraft()">Save as draft</button>
-        <button mat-stroked-button (click)="saveAndPublish()"
-        [disabled]="formDisabled"
-        >Save & Publish</button>
-    </div>
+  <div class="padding-left-30px">
+    <button mat-icon-button matSuffix routerLink="/home">
+      <mat-icon>keyboard_backspace</mat-icon>
+    </button>
+  </div>
+  <h2>Create new meeting</h2>
+  <div class="near-button-container gap-20px">
+    <button mat-stroked-button href="http://localhost/" (click)="saveDraft()">
+      Save as draft
+    </button>
+    <button
+      mat-stroked-button
+      (click)="saveAndPublish()"
+      [disabled]="formDisabled"
+    >
+      Save & Publish
+    </button>
+  </div>
 </div>
 <div class="separator-horizontal margin-top-10px" style></div>
 <div class="main-container">
-    <div class="main-menu">
-        <app-new-meeting [editedMeeting]="editedMeeting"></app-new-meeting>
-    </div>
-    <div class="separator-vertical"></div>
-    <div class="side-menu">
-        <app-tasks [initialTasks]="editedTasks" (tasksListOutput)="saveTasksList($event)"></app-tasks>
-        <app-invites [invitedToEdited]="invitedToEdited"></app-invites>
-    </div>
+  <div class="main-menu">
+    <app-new-meeting [editedMeeting]="editedMeeting"></app-new-meeting>
+  </div>
+  <div class="separator-vertical"></div>
+  <div class="side-menu">
+    <app-tasks
+      [initialTasks]="editedTasks"
+      (tasksListOutput)="saveTasksList($event)"
+    ></app-tasks>
+    <app-invites [invitedToEdited]="invitedToEdited"></app-invites>
+  </div>
 </div>
