bugfix#16: fixed bug that when we go to edit-meeting/id directly by url adress form did't load meeting data

--- a/frontend/src/app/edit-meeting-page/edit-meeting-page.component.html
+++ b/frontend/src/app/edit-meeting-page/edit-meeting-page.component.html
@@ -5,8 +5,7 @@
     <h2>Edit Meeting № {{editedMeetingId}}</h2>
     <div class="near-button-container gap-20px">
         <button mat-stroked-button href="http://localhost/" (click)="saveDraft()">Save as draft</button>
-        <button mat-stroked-button (click)="saveAndPublish()" 
-        >Save & Publish</button>
+        <button mat-stroked-button (click)="saveAndPublish()">Save & Publish</button>
     </div>
 </div>
 <div class="separator-horizontal margin-top-10px" style></div>
