--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,9 @@
 <div>
   <h2 class="padding-20px">Board Meetings App</h2>
   <router-outlet></router-outlet>
+
+</div>
+<div style="padding: 50px"></div>
+<div>
+  <app-footer></app-footer>
 </div>
